--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=ffee7ee3221024fe48fae8ead93fe118
+APP_DEBUG=true
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
