--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -17,3 +17,7 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+        dql:
+            datetime_functions:
+                date_format: DoctrineExtensions\Query\Mysql\DateFormat
+
