--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "doctrine/doctrine-bundle": "^2.3",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.8",
+        "guzzlehttp/guzzle": "^7.3",
         "nesbot/carbon": "^2.46",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
